CAY-1590 DDL generation without a live datasource
CAY-1594 DI extension point: turning on/off cross-ObjectContext synchronization
CAY-1599 Annotation-based global listeners registration

Bug Fixes Since 3.1M2:

CAY-1469 Modeler: dbRelationships renaming problem
CAY-1526 Preferences: java.lang.IllegalArgumentException: Key too long
CAY-1546 cayenne-lifecycle: UuidBatchFault concurrency issues
CAY-1555 Unpublished dependencies of Maven plugins
CAY-1575 Error generating Embeddable classes in Cayenne Modeler
CAY-1577 SQL queries for LIKE expressions with escape character generated with syntax errors
CAY-1581 Not-Escaping <> during serialization to *.map.xml
CAY-1583 context.getObjectStore() returning null causing NullpointerException in DataMergeHandler
CAY-1585 SelectQuery automatic cache key needs FetchOffset
CAY-1539 Incorrect offset handling on some queries against database with supported LIMIT/OFFSET clauses

----------------------------------
Release: 3.1 M2
Date: 
----------------------------------
Changes/New Features Since 3.1M1:

CAY-1445 Initialize QueryCache via dependency injection
CAY-1508 Support for DataChannel filters
CAY-1509 Lifecycle event annotations support
CAY-1532 Import cayenne-lifecycle from sandbox
CAY-1533 Deprecate org.apache.cayenne.xml
CAY-1534 cayenne-lifecycle: implement AuditableFilter
CAY-1536 Expand deserialization context to provide Injector object instead of just a DataChannel.

Bug Fixes Since 3.1M1:

CAY-1511 Problem in db2: comparison operators are not supported on Clob object values.
CAY-1515 runtime relationships are not initialized
CAY-1516 CayenneModeler - DataMap deletion doesn't delete DataMap XML
CAY-1517 CayenneModeler - recent projects ordering is random
CAY-1519 Application deadlock trying to guess static constant fields
CAY-1528 Undo CAY-1213
CAY-1529 Cayenne should support enum types in qualifier statements/expression handling
CAY-1542 DI container is not shutting down Cayenne-managed connection pool
